XX/XX/XXXX 0.9.7
	   - Added Voltcraft VC870 (Florian Evers)

28/01/2016 0.9.6
	   - Code clean up
	   - fix translation loading
	   - Fix message handler
	   - Fix file export (leading zero of the time stamp)
	   - Fix console logging on Windows
	   - Remove 1/10s sample rate -> don't work with most devices
	   - Use infinity sign to set endless recoder
	   - Fix hang of M-4660A

14/07/2015 0.9.5
	   - Port to Qt5
	   - Use C++14
	   - Add translation support

27/04/2014 0.9.0
	   - QtDMM was ported to Qt4.x (still a few minor bugs, but usable)
	   - QtDMM was relicensed from GPL 2.0 to GPL 3
	   - Added TekPower TP4000ZC / digitek DT4000ZC
	   - Added PeakTech 3430

11/07/2009 0.8.14
	   - terminal flags
	   - VC 920

11/07/2009 0.8.13
	   - One hour recording crash bug
	   - Metex M-4650C settings (Samuel Hildebrandt)
	   - Tenma 72-1016 settings (simon morris)
	   - Metex M-3870D settings (Zdeněk Šigut)

25/12/2007 0.8.12
	   - Added PeakTech 4015A (Jochen Puchalla)
	   - Added Tenma 72-7745 (Laurent Perez)
	   - Bugfix McVoice M-980T (Erik Hobel)
	   - Added Digitech QM1462 (Peter Halasz)
	   - Added Digitek INO2513
	   - Added Raio Shack 22-812 (Peter Halasz)
	   - Corrected typo in dmmgraph (Erik Hobel)

20/11/2007 0.8.11
	   - GCC 4.3 compilation issues
	   - Make it compile on OSX

30/09/2007 0.8.10
	   - Added Sinometer MAS-343
	   - Adedd PeakTech 3330 (Jonny Bijlsma)
	   - Bugfix in VC820 protocoll
	   - Added Voltrcaft VC940
	   - Added Digitech QM1537 (Rob Brown)
	   - Added Uni-Trend UT30A and UT30E
	   - Added Digitek DT-9062
	   - Confirmation Voltcraft M-3860
	   - Added PeakTech 4360 (Klaus Kaiser)

19/08/2007 0.8.9
	   - Added Voltcraft M-3610D
	   - Added Iso-Tech IDM 73 (Paolo Bernardelli)

19/11/2006 0.8.8
	   - Make it compile with gcc 4.1
	   - Added Digitech QM1538
	   - Added MASTECH MAS-345
	   - Added McVoice M-345pro
	   - Added Voltcraft M-4650CR
	   - Context menu for graph
	   - import works better (but not 100%)

20/12/2005 0.8.7