@@ -61,6 +61,7 @@ class DisplayWid : public QWidget
 	  QBitmap	*m_bigF;
 	  QBitmap	*m_bigV;
 	  QBitmap	*m_bigVA;
+	  QBitmap	*m_bigcosphi;
 	  QBitmap	*m_bigA;
 	  QBitmap	*m_bigH;
 	  QBitmap	*m_bigW;
@@ -84,6 +85,7 @@ class DisplayWid : public QWidget
 	  QPixmap	*m_smallF;
 	  QPixmap	*m_smallV;
 	  QPixmap	*m_smallVA;
+	  QPixmap	*m_smallcosphi;
 	  QPixmap	*m_smallA;
 	  QPixmap	*m_smallH;
 	  QPixmap	*m_smallW;
