@@ -1,0 +1,21 @@
+/* XPM */
+static const char * cosphi_xpm[] = {
+"21 16 2 1",
+"       c None",
+".      c #000000",
+"   .....     ..  ... ",
+" ........   ..  .....",
+" ...   ... ..   .. ..",
+"...     .. ..  ..  ..",
+"..      .. ..  ..  ..",
+"..         ..  ..  ..",
+"..         ... .. .. ",
+"..          ........ ",
+"..           ......  ",
+"..             ..    ",
+"..             ..    ",
+"..      ..     ..    ",
+"...     ..     ..    ",
+" ...   ...     ..    ",
+" ........      ..    ",
+"   .....       ..    "};
