@@ -1,0 +1,13 @@
+/* XPM */
+static const char * cosphi_small_xpm[] = {
+"13 8 2 1",
+"       c None",
+".      c #000000",
+" ...   .  .. ",
+".   . .  .  .",
+".     .  .  .",
+".     .  .  .",
+".      ..... ",
+".        .   ",
+".   .    .   ",
+" ...     .   "};
