@@ -1,5 +1,7 @@
 XX/XX/XXXX 0.9.7
 	   - Added Voltcraft VC870 (Florian Evers)
+	   - Added VA symbols to display apparent power
+	   - Added cosphi symbols to display the power factor
 
 28/01/2016 0.9.6
 	   - Code clean up
